--- a/JProxifier/pom.xml
+++ b/JProxifier/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>JProxifier2</name>
+  <name>JProxifier</name>
   <url>http://maven.apache.org</url>
 
   <properties>
